Added CSI < Ps c command for extended attributes
Added CSI ? Ps1 ; Ps2 S to query graphics canvas size
Add a new ANSI compliant DCS command for font loading
Support bright background mode in curses when in xterm 88 or 256 color mode
Added support for cached font assets
Support for XTerm and TundraDraw/PabloDraw 24-bit color modes
Some PETSCII keyboard changes
Add support for DECRQSS

Version 1.0
-----------
New ability to use the blink attribute to select alternate font
Fixes for user font management
Help text cleanup
Handle the close window button gracefully
Allow left/right to switch dir/file columns in file picker
Allow case-only changes to directory entries
Translate copies from non-ASCII screens screen modes to ASCII
Add copy/paste support back into OS X builds using Pasteboard
Don't conditionally compile shell support, just treat it as disabled
Support Commodore and Atari fonts when not using their native emulation
Properly save/restore the RLogin Reversed connection mode
Properly save/restore the C128 (80col) and Atari XEP80 modes
Fix separator character in status bar with fonts that don't support lines
No longer switch font to CP437 when displaying menus
Workaround SDL bug when resizing on X11
Fix the "black window" Overlay issue
Add Topaz and Micro Knight (non-Plus) Amiga fonts
Fix Function keys with Caps Lock in SDL mode
Windows console mode resize fixes
SSH stability fixes
Paginate help output
Statically link Cryptlib
Varous crashes at startup and during resize fixed
Don't add "SyncTERM" to the end of the Windows Download path
Fix NumLock behaviour on Windows

Version 0.9.5
-------------
Fix handling of ESC[m
Add IPv6 Support
Add support for ESC [?7h and ESC [?7l to disable/enable auto-wrap
Also add ESC [?Xs and ESC [?Xu to save/restore modes controlled by h and l
On Vista and newer, use the system configured download path
Add a -T argument to dump a SyncTERM terminfo entry on stdout
Increase the maximim password sizes to 128