@@ -106,5 +106,6 @@ void add_bbs(char *listpath, struct bbslist *bbs);
 int edit_list(struct bbslist **list, struct bbslist *item,char *listpath,int isdefault);
 int  get_rate_num(int rate);
 cterm_emulation_t get_emulation(struct bbslist *bbs);
+const char *get_emulation_str(cterm_emulation_t emu);
 
 #endif
